--- a/web-app/static/settings.css
+++ b/web-app/static/settings.css
@@ -111,8 +111,8 @@ button {
 }
 
 button:hover {
-  border-color: var(--hover-color);
-  color: var(--hover-color);
+  border-color: var(--link-hover-color);
+  color: var(--link-hover-color);
   cursor: pointer;
   padding: 14px 17px; /* Increase padding on hover */
   font-size: 0.75em;
